# bazel-android-samples

./: .bazelrc  .gitignore  README.md  WORKSPACE  as.bazelproject  build.gradle  gradle.properties  settings.gradle
LibModuleWithDatabinding/: .gitignore  README.md  WORKSPACE  as.bazelproject
LibModuleWithDatabinding/sample/app/: AndroidManifest.xml  BUILD
LibModuleWithDatabinding/sample/code/java/com/xachin/bazel/activity/: AndroidManifest.xml  MainActivity.java
LibModuleWithDatabinding/sample/code/java/com/xachin/bazel/activity/res/layout/: sample_main.xml
MultipleLibModulesWithDatabinding/: .gitignore
MultipleLibModulesWithDatabinding/sample/app/: BUILD
MultipleLibModulesWithDatabinding/sample/code/java/com/xachin/bazel/activity/: BUILD  MainActivity.java
app/: BUILD.bazel  build.gradle
app/src/androidTest/java/com/xachin/playground/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xachin/playground/: BUILD.bazel  PlaygroundApp.kt
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
hello-world/: BUILD.bazel  build.gradle
hello-world/src/main/: AndroidManifest.xml
hello-world/src/main/java/com/xachin/playground/binder/: HelloWorldBinders.java
hello-world/src/main/java/com/xachin/playground/clock/: ClockViewModel.java  ClockViewModel.kt  ClockViewModelImpl.java  ClockViewModelImpl.kt
hello-world/src/main/java/com/xachin/playground/hello_world/: MainActivity.java  MainActivity.kt
hello-world/src/main/res/layout/: activity_main.xml
hello-world/src/test/java/com/xachin/playground/hello_world/: ExampleUnitTest.kt
keystores/: BUILD.bazel  debug.keystore
text-binders/: BUILD.bazel  build.gradle
text-binders/src/main/: AndroidManifest.xml
text-binders/src/main/java/com/xachin/playground/text_binders/: TextBinders.java
