load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")

kt_android_library(
    name = "hello-world",
    srcs = [
        "src/main/java/com/xachin/playground/hello_world/MainActivity.kt",
        "src/main/java/com/xachin/playground/clock/ClockViewModel.kt",
        "src/main/java/com/xachin/playground/clock/ClockViewModelImpl.kt",
    ],
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/main/res/**"]),
    enable_data_binding = True,
    deps = [
        "@maven//:com_android_databinding_adapters",
        "@maven//:com_android_databinding_baseLibrary",
        "@maven//:com_android_databinding_library",
        "@maven//:com_android_support_support_annotations",
        "@maven//:javax_annotation_jsr250_api",
    ],
    custom_package = "com.xachin.playground.hello_world",
    visibility = ["//visibility:public"],
)
