android_library(
    name = "hello-world",
    srcs = [
        "src/main/java/com/xachin/playground/binder/HelloWorldBinders.java",
        "src/main/java/com/xachin/playground/clock/ClockViewModel.java",
        "src/main/java/com/xachin/playground/clock/ClockViewModelImpl.java",
        "src/main/java/com/xachin/playground/hello_world/MainActivity.java",
    ],
    custom_package = "com.xachin.playground.hello_world",
    enable_data_binding = True,
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/main/res/**"]),
    visibility = ["//app:__pkg__"],
    deps = [
        "//text-binders",
        "@maven//:com_android_databinding_adapters",
        "@maven//:com_android_databinding_baseLibrary",
        "@maven//:com_android_databinding_library",
        "@maven//:com_android_support_support_annotations",
    ],
)
